--- a/README
+++ b/README
@@ -3,5 +3,6 @@
 //  zigger 의 자세한 정보는 아래 웹사이트에서 확인
 //
 //  Website: www.zigger.net
+//  Contact: contact@zigger.net
 //
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
